--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@mariozechner/pi-tui": "0.31.0",
+    "beautiful-mermaid": "^0.1.3",
     "chalk": "^5.6.2",
     "shiki": "^3.20.0"
   },
