--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "typescript": "^5"
   },
   "dependencies": {
-    "@mariozechner/pi-tui": "0.31.0",
+    "@mariozechner/pi-tui": "^0.53.0",
     "beautiful-mermaid": "^0.1.3",
     "chalk": "^5.6.2",
     "shiki": "^3.20.0"
   },
   "patchedDependencies": {
-    "@mariozechner/pi-tui@0.31.0": "patches/@mariozechner%2Fpi-tui@0.31.0.patch"
+    "@mariozechner/pi-tui@0.53.0": "patches/@mariozechner%2Fpi-tui@0.53.0.patch"
   }
 }
